--- a/App/templates/pages/lesson.html
+++ b/App/templates/pages/lesson.html
@@ -83,18 +83,27 @@
     <div class="gooogle_adv_verti mt_t10">
         <img src="{% static 'image/google_adv/01.jpg' %}" alt="">
     </div>
+    <!-- subject more -->
+    <div class="subject_more mt_t10">
+        <!-- header -->
+        <div class="sub_header padding_5" style="background-image: url({% static 'image/background/title.jpg' %})">
+            <h4 class="bold">Khóa học khác</h4>
+        </div>
+    </div>
     <!-- lesson more -->
     <div class="lesson_more mt_t10">
+        <!-- header -->
         <div class="les_header padding_5" style="background-image: url({% static 'image/background/title.jpg' %})">
-            <h3 class="bold">Xem nhiều</h3>
-        </div>
+            <h4 class="bold">Xem nhiều</h4>
+        </div>     
+        <!-- content --> 
         <div class="les_content padding_5">
             <div class="les_row">
                 <div class="video_more mr_5">
                     <video></video>
                 </div>
                 <div class="title_more">
-                    <a href="#"><h5 class="font_size_init">Bài 2: Kiểu dữ liệu</h5></a>
+                    <a href="#"><h5 class="font_size_init">Bài 2: Kiểu dữ liệu và Kiểu dữ liệu</h5></a>
                 </div>
             </div>
 
