--- a/App/templates/pages/about.html
+++ b/App/templates/pages/about.html
@@ -8,7 +8,7 @@
         <header class="masthead mb-auto">
         <!-- navbar -->
             <nav class="navbar navbar-expand-lg navbar-dark bg_trans fixed-top">
-                <div class="container">
+                <div class="container-fluid">
                     <a class="navbar-brand" href="\trangchu">DeveloperVN</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
