--- a/App/templates/pages/home.html
+++ b/App/templates/pages/home.html
@@ -14,7 +14,7 @@
                 <img class="d-block w-100" src="{% static 'image/banner/banner02.jpg' %}" alt="First slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="{% static 'image/banner/banner02.jpg' %}" alt="Second slide">
+                <img class="d-block w-100" src="{% static 'image/banner/developerVN_baner.jpg' %}" alt="Second slide">
             </div>
             <div class="carousel-item">
                 <img class="d-block w-100" src="{% static 'image/banner/banner02.jpg' %}" alt="Third slide">
@@ -33,7 +33,7 @@
 <!-- article -->
 {% block article %}
 <article>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row mb_10">
             <div class="title_header">
                 <h2 class="mb-0 bold">Khóa Học</h2>
@@ -42,10 +42,10 @@
     </div>
     <!-- section -->
     <section class="md-section" style="padding:0;">
-        <div class="container">
+        <div class="container-fluid">
 				<div class="textbox-group">
 					<div class="row">
-						<div class="col-md-4 col-lg-4 mt_t20">
+						<div class="col-md-3 col-lg-3 mt_t20">
 									
 							<!-- textbox -->
 							<div class="textbox">
@@ -59,7 +59,7 @@
 							</div><!-- End / textbox -->
 									
 						</div>
-						<div class="col-md-4 col-lg-4 mt_t20">
+						<div class="col-md-3 col-lg-3 mt_t20">
 									
 							<!-- textbox -->
 							<div class="textbox">
@@ -73,7 +73,7 @@
 							</div><!-- End / textbox -->
 									
 						</div>
-						<div class="col-md-4 col-lg-4 mt_t20">
+						<div class="col-md-3 col-lg-3 mt_t20">
 									
 							<!-- textbox -->
 							<div class="textbox">
@@ -93,7 +93,7 @@
     </section>
 </article>
 <article>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row mb_10 mt_t30">
             <div class="title_header">
                 <h2 class="mb-0 bold">Việc Làm IT Tại Nhà</h2>
@@ -102,10 +102,10 @@
     </div>
     <!-- section -->
     <section class="md-section" style="padding:0;">
-        <div class="container">
+        <div class="container-fluid">
 				<div class="textbox-group">
 					<div class="row">
-						<div class="col-md-4 col-lg-4 mt_t20">									
+						<div class="col-md-3 col-lg-3 mt_t20">									
 							<!-- textbox -->
 							<div class="textbox">
 								<div class="textbox__image" style="background-image: url({% static 'image/background/yellow.jpg' %})">
