--- a/App/templates/pages/lesson.html
+++ b/App/templates/pages/lesson.html
@@ -9,7 +9,7 @@
 {% endblock %}
 <!-- article -->
 {% block article %}
-<article class="col-md-8 col-sm-12 article_area mt_t10">   
+<article class="col-md-9 col-sm-12 article_area mt_t10">   
     <div class="row mb_20">
         <div class="title_header">
             <h2 class="mb-0 bold">Python Cơ Bản</h2>
@@ -46,15 +46,19 @@
                 </div>
             </div>
             <div class="les_row">
-                <div class="lesson_next col-md-4 col-sm-6 padding_5">
+                <div class="lesson_next col-md-3 col-sm-6 padding_5">
                     <div class="video_next"><video></video></div>
                     <div class="title_next"><a href="#"><h5 class="font_size_init" alt="Bài 2: Cú pháp đơn giản 12345678">Bài 2: Cú pháp đơn giản 12345678</h5></a></div>
                 </div>
-                <div class="lesson_next col-md-4 col-sm-6 padding_5">
+                <div class="lesson_next col-md-3 col-sm-6 padding_5">
                     <div class="video_next"><video></video></div>
                     <div class="title_next"><a href="#"><h5 class="font_size_init">Bài 2: Cú pháp đơn giản</h5></a></div>
                 </div>
-                <div class="lesson_next col-md-4 col-sm-6 padding_5">
+                <div class="lesson_next col-md-3 col-sm-6 padding_5">
+                    <div class="video_next"><video></video></div>
+                    <div class="title_next"><a href="#"><h5 class="font_size_init">Bài 2: Cú pháp đơn giản</h5></a></div>
+                </div>
+                <div class="lesson_next col-md-3 col-sm-6 padding_5">
                     <div class="video_next"><video></video></div>
                     <div class="title_next"><a href="#"><h5 class="font_size_init">Bài 2: Cú pháp đơn giản</h5></a></div>
                 </div>
@@ -72,7 +76,7 @@
 {% endblock %}
  <!-- aside -->
 {% block aside %}
-<aside class="col-md-4 col-sm-12 aside_area mt_t10">
+<aside class="col-md-3 col-sm-12 aside_area mt_t10">
     <!-- facebook -->
     <div id="fb-root"></div>
     <div class="fb-page" data-href="https://www.facebook.com/Developer-Vi%E1%BB%87t-Nam-109512397877362" 
@@ -86,14 +90,14 @@
     <!-- subject more -->
     <div class="subject_more mt_t10">
         <!-- header -->
-        <div class="sub_header padding_5" style="background-image: url({% static 'image/background/title.jpg' %})">
+        <div class="sub_header padding_5">
             <h4 class="bold">Khóa học khác</h4>
         </div>
     </div>
     <!-- lesson more -->
     <div class="lesson_more mt_t10">
         <!-- header -->
-        <div class="les_header padding_5" style="background-image: url({% static 'image/background/title.jpg' %})">
+        <div class="les_header padding_5">
             <h4 class="bold">Xem nhiều</h4>
         </div>     
         <!-- content --> 
