--- a/App/templates/base_les.html
+++ b/App/templates/base_les.html
@@ -23,53 +23,18 @@
         <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
         <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v10.0&appId=274403149747890&autoLogAppEvents=1" nonce="kyZ37haC"></script>
         <!-- java script self-defined -->
+        <script src="{% static 'js/common.js' %}"></script>
         
     </head>
     <body>
         <!-- header -->
         <header class="header header-transparent">
             <!-- navbar -->
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-                <div class="container">
-                    <a class="navbar-brand" href="\trangchu">DeveloperVN</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-
-                    <div class="collapse navbar-collapse" id="navbarsExample07">
-                        <ul class="navbar-nav mr-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="\trangchu">Trang Chủ <span class="sr-only">(current)</span></a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown07" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Khóa Học</a>
-                                <div class="dropdown-menu" aria-labelledby="dropdown07">
-                                    <a class="dropdown-item" href="#">Python</a>
-                                    <a class="dropdown-item" href="#">ReactJS</a>
-                                    <a class="dropdown-item" href="#">GoLang</a>
-                                </div>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="\gioithieu">Chia Sẻ Kiến Thức</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="\gioithieu">Giới Thiệu</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="\dangnhap">Liên Hệ</a>
-                            </li>                           
-                        </ul>
-                        <form class="form-inline my-2 my-md-0">
-                            <button class="btn btn-sm btn-rs text-while" formaction ="\dangky">Đăng Ký</button>
-                        <button class="btn btn-sm btn-rs text-while" formaction ="\dangnhap">Đăng Nhập</button>
-                        </form>
-                    </div>
-                </div>
-            </nav>
+            {% include "base_nav.html" %}
             <!-- banner -->
             {% block banner %}{% endblock %}            
         </header>
-        <div class="container content">
+        <div class="container-fluid content">
             <div class="row">
             <!-- article -->
             {% block article %}{% endblock %}
@@ -81,7 +46,7 @@
         <!-- footer -->
         <footer class="bg-dark bg-cover footer mt_t30">
             <div class="py-6">
-                <div class="container">
+                <div class="container-fluid">
                     <div class="row">
                         <div class="col-sm-12 col-md-12 col-12 col-lg-12 col-xl-6">
                             <!-- Copyright -->
