--- a/App/templates/base_sub.html
+++ b/App/templates/base_sub.html
@@ -22,6 +22,7 @@
         <script src="{% static 'js/bootstrap.min.js' %}" async defer></script>
         <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
         <!-- java script self-defined -->
+        <script src="{% static 'js/common.js' %}"></script>
         
     </head>
     {% block body %}{% endblock %}
