--- a/App/templates/pages/subjects.html
+++ b/App/templates/pages/subjects.html
@@ -10,7 +10,7 @@
 <!-- article -->
 {% block article %}
 <article class="mt_t30">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row mb_20">
             <div class="title_header">
                 <h2 class="mb-0 bold">Python Cơ Bản</h2>
@@ -19,9 +19,9 @@
     </div>
     <!-- section -->
     <section class="md-section">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
-                <div class="item tns-item tns-slide-active col-md-3 col-lg-3" id="tns1-item3">
+                <div class="item tns-item tns-slide-active col-md-2 col-lg-2" id="tns1-item3">
                     <!-- Card -->
                     <div class="card  mb-4 card-hover">
                         <a href="\baihoc" class="card-img-top"><img src="{% static 'image/subjects/python/course-python.jpg' %}" alt="" class="card-img-top rounded-top"></a>
@@ -63,7 +63,91 @@
                     </div>
                 </div>
 
-                <div class="item tns-item tns-slide-active col-md-3 col-lg-3" id="tns1-item3">
+                <div class="item tns-item tns-slide-active col-md-2 col-lg-2" id="tns1-item3">
+                    <!-- Card -->
+                    <div class="card  mb-4 card-hover">
+                        <a href="\baihoc" class="card-img-top"><img src="{% static 'image/subjects/python/course-python.jpg' %}" alt="" class="card-img-top rounded-top"></a>
+                        <!-- Card Body -->
+                        <div class="card-body">
+                            <h5 class="mb-2 text-truncate-line-2 "><a href="\baihoc" class="text-inherit">Bài 1: Giới thiệu</a></h5>
+                            <!-- List -->
+                            <ul class="mb-3 list-inline">
+                                <li class="list-inline-item"><i class="far fa-clock mr-1"></i>2h 30m</li>
+                            </ul>
+                            <div class="lh-1">
+                                <span>
+                                    <i class="mdi mdi-star text-warning mr-n1"></i>
+                                    <i class="mdi mdi-star text-warning mr-n1"></i>
+                                    <i class="mdi mdi-star text-warning mr-n1"></i>
+                                    <i class="mdi mdi-star text-warning mr-n1"></i>
+                                    <i class="mdi mdi-star text-warning"></i>
+                                </span>
+                                <span class="text-warning">4.5</span>
+                                <span class="font-size-xs text-muted">(13,245)</span>
+                            </div>
+                        </div>
+                        <!-- Card Footer -->
+                        <div class="card-footer">
+                            <div class="row align-items-center no-gutters">
+                                <div class="col-auto">
+                                    <img src="assets/images/avatar/avatar-4.jpg" class="rounded-circle avatar-xs" alt="">
+                                </div>
+                                <div class="col ml-2">
+                                    <span>Claire Robertson</span>
+                                </div>
+                                <div class="col-auto">
+                                    <a href="#!" class="text-muted bookmark">
+                                    <i class="fe fe-bookmark  "></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item tns-item tns-slide-active col-md-2 col-lg-2" id="tns1-item3">
+                    <!-- Card -->
+                    <div class="card  mb-4 card-hover">
+                        <a href="\baihoc" class="card-img-top"><img src="{% static 'image/subjects/python/course-python.jpg' %}" alt="" class="card-img-top rounded-top"></a>
+                        <!-- Card Body -->
+                        <div class="card-body">
+                            <h5 class="mb-2 text-truncate-line-2 "><a href="\baihoc" class="text-inherit">Bài 1: Giới thiệu</a></h5>
+                            <!-- List -->
+                            <ul class="mb-3 list-inline">
+                                <li class="list-inline-item"><i class="far fa-clock mr-1"></i>2h 30m</li>
+                            </ul>
+                            <div class="lh-1">
+                                <span>
+                                    <i class="mdi mdi-star text-warning mr-n1"></i>
+                                    <i class="mdi mdi-star text-warning mr-n1"></i>
+                                    <i class="mdi mdi-star text-warning mr-n1"></i>
+                                    <i class="mdi mdi-star text-warning mr-n1"></i>
+                                    <i class="mdi mdi-star text-warning"></i>
+                                </span>
+                                <span class="text-warning">4.5</span>
+                                <span class="font-size-xs text-muted">(13,245)</span>
+                            </div>
+                        </div>
+                        <!-- Card Footer -->
+                        <div class="card-footer">
+                            <div class="row align-items-center no-gutters">
+                                <div class="col-auto">
+                                    <img src="assets/images/avatar/avatar-4.jpg" class="rounded-circle avatar-xs" alt="">
+                                </div>
+                                <div class="col ml-2">
+                                    <span>Claire Robertson</span>
+                                </div>
+                                <div class="col-auto">
+                                    <a href="#!" class="text-muted bookmark">
+                                    <i class="fe fe-bookmark  "></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item tns-item tns-slide-active col-md-2 col-lg-2" id="tns1-item3">
                     <!-- Card -->
                     <div class="card  mb-4 card-hover">
                         <a href="pages/course-single.html" class="card-img-top"><img src="{% static 'image/subjects/python/course-python.jpg' %}" alt="" class="card-img-top rounded-top"></a>
@@ -104,7 +188,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="item tns-item tns-slide-active col-md-3 col-lg-3" id="tns1-item3">
+                <div class="item tns-item tns-slide-active col-md-2 col-lg-2" id="tns1-item3">
                     <!-- Card -->
                     <div class="card  mb-4 card-hover">
                         <a href="pages/course-single.html" class="card-img-top"><img src="{% static 'image/subjects/python/course-python.jpg' %}" alt="" class="card-img-top rounded-top"></a>
@@ -145,7 +229,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="item tns-item tns-slide-active col-md-3 col-lg-3" id="tns1-item3">
+                <div class="item tns-item tns-slide-active col-md-2 col-lg-2" id="tns1-item3">
                     <!-- Card -->
                     <div class="card  mb-4 card-hover">
                         <a href="pages/course-single.html" class="card-img-top"><img src="{% static 'image/subjects/python/course-python.jpg' %}" alt="" class="card-img-top rounded-top"></a>
@@ -191,7 +275,7 @@
     </section>
 </article>
 <article class="mt_t20">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row mb_20">
             <div class="title_header">
                 <h2 class="mb-0 bold">Python Nâng Cao</h2>
@@ -200,9 +284,9 @@
     </div>
     <!-- section -->
     <section class="md-section">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
-                <div class="item tns-item tns-slide-active col-md-3 col-lg-3" id="tns1-item3">
+                <div class="item tns-item tns-slide-active col-md-2 col-lg-2" id="tns1-item3">
                     <!-- Card -->
                     <div class="card  mb-4 card-hover">
                         <a href="pages/course-single.html" class="card-img-top"><img src="{% static 'image/subjects/python/course-python.jpg' %}" alt="" class="card-img-top rounded-top"></a>
@@ -244,7 +328,7 @@
                     </div>
                 </div>
 
-                <div class="item tns-item tns-slide-active col-md-3 col-lg-3" id="tns1-item3">
+                <div class="item tns-item tns-slide-active col-md-2 col-lg-2" id="tns1-item3">
                     <!-- Card -->
                     <div class="card  mb-4 card-hover">
                         <a href="pages/course-single.html" class="card-img-top"><img src="{% static 'image/subjects/python/course-python.jpg' %}" alt="" class="card-img-top rounded-top"></a>
@@ -285,7 +369,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="item tns-item tns-slide-active col-md-3 col-lg-3" id="tns1-item3">
+                <div class="item tns-item tns-slide-active col-md-2 col-lg-2" id="tns1-item3">
                     <!-- Card -->
                     <div class="card  mb-4 card-hover">
                         <a href="pages/course-single.html" class="card-img-top"><img src="{% static 'image/subjects/python/course-python.jpg' %}" alt="" class="card-img-top rounded-top"></a>
@@ -326,7 +410,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="item tns-item tns-slide-active col-md-3 col-lg-3" id="tns1-item3">
+                <div class="item tns-item tns-slide-active col-md-2 col-lg-2" id="tns1-item3">
                     <!-- Card -->
                     <div class="card  mb-4 card-hover">
                         <a href="pages/course-single.html" class="card-img-top"><img src="{% static 'image/subjects/python/course-python.jpg' %}" alt="" class="card-img-top rounded-top"></a>
