--- a/App/static/css/style.css
+++ b/App/static/css/style.css
@@ -8,13 +8,11 @@ section a:hover, aside a:hover{
     text-decoration: none;
     color: #d14b02 !important;
 }
-.container-fluid{
+/*.container-fluid{
     padding-left: 30px !important;
     padding-right: 30px !important;
-}
-.title_header{
-    margin-left: 10px;
-}
+} */
+
 .footer{
     min-height: 60px;
     max-height: 117px;
@@ -23,6 +21,7 @@ section a:hover, aside a:hover{
     vertical-align: middle;
 }
 .py-6 {
+    text-align: center;
     padding-bottom: 1.5rem!important;
     padding-top: 1.5rem!important;
 }
@@ -208,3 +207,25 @@ video{
     text-overflow: ellipsis;
     white-space: normal;
 }
+.content{
+    margin-top: 55px;
+}
+#topBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: #0288d1;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+  }
+  
+#topBtn:hover {
+    background-color: red;
+  }
