--- a/App/static/css/style.css
+++ b/App/static/css/style.css
@@ -159,7 +159,7 @@ video{
     flex-wrap: wrap;
 }
 .les_header, .sub_header{
-    background-color: #417690;   
+    background-color: #016ca7;   
     width: 100%;
     height: auto;
     color: unset;
