--- a/App/templates/pages/lesson.html
+++ b/App/templates/pages/lesson.html
@@ -134,19 +134,19 @@
         <img src="{% static 'image/google_adv/01.jpg' %}" alt="">
     </div>
     <!-- lesson more -->
-    <div class="lesson_more mt_t10">
+    <div class="card box-shadow lesson_more mt_t10">
         <!-- header -->
-        <div class="les_header padding_5">
+        <div class="card-header les_header">
             <h4><i class="fas fa-list mr_10"></i>Bài học liên quan</h4>
         </div>     
         <!-- content --> 
-        <div class="les_content padding_5">
+        <div class="card-body les_content padding_5">
             <div class="les_row">
                 <div class="video_more mr_5">
                     <video></video>
                 </div>
                 <div class="title_more">
-                    <a href="#"><h5 class="font_size_init">Bài 2: Kiểu dữ liệu và Kiểu dữ liệu</h5></a>
+                    <a href="#" title="Bài 2: Kiểu dữ liệu và Kiểu dữ liệu"><h5 class="font_size_init">Bài 2: Kiểu dữ liệu và Kiểu dữ liệu</h5></a>
                 </div>
             </div>
 
