--- a/App/templates/pages/home.html
+++ b/App/templates/pages/home.html
@@ -49,8 +49,8 @@
 									
 							<!-- textbox -->
 							<div class="textbox">
-								<div class="textbox__image" style="background-image: url({% static 'image/background/yellow.jpg' %})">
-									<a href="\khoahoc"><img src="{% static  'image/session/python.png' %}" alt="python"></a>
+								<div class="textbox__image" style="background-image: url({% static 'image/background/yellow02.jpg' %})">
+									<a href="\khoahoc"><img src="{% static  'image/course/python.png' %}" alt="python"></a>
 								</div>
 								<div class="textbox__body">
 									<h2 class="textbox__title"><a href="\khoahoc">Python</a></h2>
@@ -63,8 +63,8 @@
 									
 							<!-- textbox -->
 							<div class="textbox">
-								<div class="textbox__image" style="background-image: url({% static 'image/background/yellow.jpg' %})">
-									<a href="#"><img src="{% static  'image/session/reactjs.png' %}" alt="reactjs"></a>
+								<div class="textbox__image" style="background-image: url({% static 'image/background/yellow02.jpg' %})">
+									<a href="#"><img src="{% static  'image/course/reactjs.png' %}" alt="reactjs"></a>
 								</div>
 								<div class="textbox__body">
 									<h2 class="textbox__title"><a href="#">ReactJS</a></h2>
@@ -77,8 +77,8 @@
 									
 							<!-- textbox -->
 							<div class="textbox">
-								<div class="textbox__image" style="background-image: url({% static 'image/background/yellow.jpg' %})">
-									<a href="#"><img src="{% static  'image/session/golang.png' %}" alt="golang"></a>
+								<div class="textbox__image" style="background-image: url({% static 'image/background/yellow02.jpg' %})">
+									<a href="#"><img src="{% static  'image/course/golang.png' %}" alt="golang"></a>
 								</div>
 								<div class="textbox__body">
 									<h2 class="textbox__title"><a href="#">GoLang</a></h2>
@@ -108,8 +108,8 @@
 						<div class="col-md-3 col-lg-3 mt_t20">									
 							<!-- textbox -->
 							<div class="textbox">
-								<div class="textbox__image" style="background-image: url({% static 'image/background/yellow.jpg' %})">
-									<a href="#"><img src="{% static  'image/session/python.png' %}" alt="python"></a>
+								<div class="textbox__image" style="background-image: url({% static 'image/background/yellow02.jpg' %})">
+									<a href="#"><img src="{% static  'image/course/python.png' %}" alt="python"></a>
 								</div>
 								<div class="textbox__body">
 									<h2 class="textbox__title"><a href="#">Việc Làm IT Tại Nhà</a></h2>
