--- a/App/templates/base_nav.html
+++ b/App/templates/base_nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark-des fixed-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="\trangchu">DeveloperVN</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,7 +26,10 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="\dangnhap">Liên Hệ</a>
-                </li>                           
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="\dangnhap">Tài trợ</a>
+                </li>                        
             </ul>
             <form class="form-inline my-2 my-md-0">
                 <button class="btn btn-sm btn-rs text-while" formaction ="\dangky">Đăng Ký</button>
