--- a/App/templates/base_sub.html
+++ b/App/templates/base_sub.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="{% static 'css/common.css' %}">
         <link rel="stylesheet" href="{% static 'css/base_sub.css' %}">
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
-        <link rel="stylesheet" href="{% static 'css/font.css' %}">
+        <link rel="stylesheet" href="{% static 'css/screen_size.css' %}">
 
         <!-- java script library-->
         <script src="{% static 'js/jquery-3.4.0.min.js' %}"></script>
