--- a/App/templates/pages/about.html
+++ b/App/templates/pages/about.html
@@ -35,7 +35,10 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Liên Hệ</a>
-                            </li>                           
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Tài trợ</a>
+                            </li>                        
                         </ul>
                     <form class="form-inline my-2 my-md-0">
                         <button class="btn btn-sm btn-rs text-while" formaction ="\dangky">Đăng Ký</button>
