--- a/App/templates/pages/lesson.html
+++ b/App/templates/pages/lesson.html
@@ -24,7 +24,7 @@
                 <p>100 lượt xem</p>
             </div>
             <div class="author ml_20">
-                <p><b>Tác giả:</b> Developer Việt Nam</p>
+                <p><b>Tác giả:</b> Phan Chí Quang</p>
             </div>
         </div>
         <div class="change row_mr0 mt_t10">
@@ -32,7 +32,7 @@
                 <button class="btn btn-sm btn-rs text-while" title="bài học trước"><i class="fas fa-angle-double-left"></i></button>
             </div>
             <div class="next_lesson">
-                <button class="btn btn-sm btn-rs text-while" title="bài học sau"><i class="fas fa-angle-double-right"></i></i></button>
+                <button class="btn btn-sm btn-rs text-while" title="bài học sau"><i class="fas fa-angle-double-right"></i></button>
             </div>
         </div>
         <div class="content_lesson mb_20 mt_t10">
@@ -51,30 +51,95 @@
         <div class="gooogle_adv_hori">
             <img src="{% static 'image/google_adv/01.jpg' %}" alt="">
         </div>
+        <div class="card box-shadow support mb_20 mt_t10">
+            <div class="card-header title_support">
+                <h4>Thông tin tài khoản nhận tài trợ</h4>
+            </div>
+            <div class="card-body">
+                <div class="row_mr0">
+                    <div class="lesson_next col-md-3 col-sm-6">
+                        <div class="card">
+                            <div class="image_bank">
+                                <img src="{% static 'image/bank/tpbank.jpg' %}" alt="" class="card-img-top rounded-top">
+                            </div>
+                            <div class="card-body info_bank">
+                                <p>Số tài khoản: 01903294701</p>
+                                <p>Chủ tài khoản: PHAN CHI QUANG</p>
+                            </div>
+                            <div class="card-footer">
+                                <p class="bold">Ngân hàng TPBank</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="lesson_next col-md-3 col-sm-6">
+                        <div class="card">
+                            <div class="image_bank">
+                                <img src="{% static 'image/bank/Teckcombank.png' %}" alt="" class="card-img-top rounded-top">
+                            </div>
+                            <div class="card-body info_bank">
+                                <p>Số tài khoản: 01903294701</p>
+                                <p>Chủ tài khoản: PHAN CHI QUANG</p>
+                            </div>
+                            <div class="card-footer">
+                                <p class="bold">Ngân hàng Tackcombank</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="lesson_next col-md-3 col-sm-6">
+                        <div class="card">
+                            <div class="image_bank">
+                                <img src="{% static 'image/bank/momo.jpg' %}" alt="" class="card-img-top rounded-top">
+                            </div>
+                            <div class="card-body info_bank">
+                                <p>Số điện thoại: 0977224791</p>
+                                <p>Tên tài khoản: PHAN CHI QUANG</p>
+                            </div>
+                            <div class="card-footer">
+                                <p class="bold">Ví Momo</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="lesson_next col-md-3 col-sm-6">
+                        <div class="card">
+                            <div class="image_bank">
+                                <img src="{% static 'image/bank/ZaloPay.png' %}" alt="" class="card-img-top rounded-top">
+                            </div>
+                            <div class="card-body info_bank">
+                                <p>Số điện thoại: 0977224791</p>
+                                <p>Tên tài khoản: PHAN CHI QUANG</p>
+                            </div>
+                            <div class="card-footer">
+                                <p class="bold">Ví ZaloPay</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- lesson next -->
         <div class="lesson_next_more mt_t10">
             <div class="les_title">
                 <div class="left">
-                    <h5 class="bold">Bài học tiếp theo</h5>
+                    <h5 class="bold">Chia sẻ kiến thức</h5>
                 </div>
                 <div class="right">
 
                 </div>
             </div>
             <div class="les_row">
-                <div class="lesson_next col-md-3 col-sm-6 padding_5">
+                <div class="lesson_next col-md-3 col-sm-6 col-12 padding_5">
                     <div class="video_next"><video></video></div>
                     <div class="title_next"><a href="#"><h5 class="font_size_init" alt="Bài 2: Cú pháp đơn giản 12345678">Bài 2: Cú pháp đơn giản 12345678</h5></a></div>
                 </div>
-                <div class="lesson_next col-md-3 col-sm-6 padding_5">
+                <div class="lesson_next col-md-3 col-sm-6 col-12 padding_5">
                     <div class="video_next"><video></video></div>
                     <div class="title_next"><a href="#"><h5 class="font_size_init">Bài 2: Cú pháp đơn giản</h5></a></div>
                 </div>
-                <div class="lesson_next col-md-3 col-sm-6 padding_5">
+                <div class="lesson_next col-md-3 col-sm-6 col-12 padding_5">
                     <div class="video_next"><video></video></div>
                     <div class="title_next"><a href="#"><h5 class="font_size_init">Bài 2: Cú pháp đơn giản</h5></a></div>
                 </div>
-                <div class="lesson_next col-md-3 col-sm-6 padding_5">
+                <div class="lesson_next col-md-3 col-sm-6 col-12 padding_5">
                     <div class="video_next"><video></video></div>
                     <div class="title_next"><a href="#"><h5 class="font_size_init">Bài 2: Cú pháp đơn giản</h5></a></div>
                 </div>
@@ -137,7 +202,7 @@
     <div class="card box-shadow lesson_more mt_t10">
         <!-- header -->
         <div class="card-header les_header">
-            <h4><i class="fas fa-list mr_10"></i>Bài học liên quan</h4>
+            <h4><i class="fas fa-list mr_10"></i>Danh sách bài học</h4>
         </div>     
         <!-- content --> 
         <div class="card-body les_content padding_5">
