--- a/App/static/css/style.css
+++ b/App/static/css/style.css
@@ -228,4 +228,9 @@ video{
   
 #topBtn:hover {
     background-color: red;
-  }
+}
+.btn-black-des{
+    color: #fff;
+    background-color: transparent;
+    border-color: transparent;
+}
