--- a/App/templates/base_les.html
+++ b/App/templates/base_les.html
@@ -24,7 +24,7 @@
         <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
         <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v10.0&appId=274403149747890&autoLogAppEvents=1" nonce="kyZ37haC"></script>
         <!-- java script self-defined -->
-        <script src="{% static 'js/common.js' %}"></script>
+        <script src="{% static 'js/validate.js' %}"></script>
         <script src="{% static 'js/style.js' %}"></script>
         
     </head>
