--- a/App/templates/pages/lesson.html
+++ b/App/templates/pages/lesson.html
@@ -178,17 +178,17 @@
             <div class="row_mr0">
                 <div class="col-md-4 col-sm-4 padding_10">
                     <div class="textbox__image" style="background-image: url({% static 'image/background/yellow.jpg' %})">
-                        <a href="\khoahoc"><img src="{% static  'image/session/python.png' %}" alt="python"></a>
+                        <a href="\khoahoc"><img src="{% static  'image/course/python.png' %}" alt="python"></a>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-4 padding_10">
                     <div class="textbox__image" style="background-image: url({% static 'image/background/yellow.jpg' %})">
-                        <a href="#"><img src="{% static  'image/session/reactjs.png' %}" alt="reactjs"></a>
+                        <a href="#"><img src="{% static  'image/course/reactjs.png' %}" alt="reactjs"></a>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-4 padding_10">
                     <div class="textbox__image" style="background-image: url({% static 'image/background/yellow.jpg' %})">
-                        <a href="#"><img src="{% static  'image/session/golang.png' %}" alt="reactjs"></a>
+                        <a href="#"><img src="{% static  'image/course/golang.png' %}" alt="reactjs"></a>
                     </div>
                 </div>
             </div>
