--- a/App/templates/base.html
+++ b/App/templates/base.html
@@ -23,7 +23,7 @@
         <script src="{% static 'js/bootstrap.min.js' %}" async defer></script>
         <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
         <!-- java script self-defined -->
-        <script src="{% static 'js/common.js' %}"></script>
+        <script src="{% static 'js/validate.js' %}"></script>
         <script src="{% static 'js/style.js' %}"></script>
         
     </head>
