--- a/App/templates/base_nav.html
+++ b/App/templates/base_nav.html
@@ -7,7 +7,7 @@
 
         <div class="collapse navbar-collapse" id="navbarsExample07">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item home">
                     <a class="nav-link" href="\trangchu">Trang Chủ <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
@@ -18,22 +18,37 @@
                         <a class="dropdown-item" href="#">GoLang</a>
                     </div>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item document">
                     <a class="nav-link" href="\gioithieu">Chia Sẻ Kiến Thức</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item about">
                     <a class="nav-link" href="\gioithieu">Giới Thiệu</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item contact">
                     <a class="nav-link" href="\dangnhap">Liên Hệ</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item sponsorship">
                     <a class="nav-link" href="\dangnhap">Tài trợ</a>
                 </li>                        
             </ul>
             <form class="form-inline my-2 my-md-0">
-                <button class="btn btn-sm btn-rs text-while" formaction ="\dangky">Đăng Ký</button>
-                <button class="btn btn-sm btn-rs text-while" formaction ="\dangnhap">Đăng Nhập</button>
+                {% if user.username != ''%}
+                    <div class="btn-group mr_30">
+                        <button class="btn btn-black-des btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            {{ user.username}}
+                        </button>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#"><i class="fas fa-info-circle mr_5"></i>Thông tin</a>
+                            <a class="dropdown-item" href="#"><i class="fas fa-key mr_5"></i>Đổi mật khẩu</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="\dangxuat"><i class="fas fa-sign-out-alt mr_5"></i>Đăng xuất</a>
+                        </div>
+                    </div>
+
+                {% elif user.username == ''%}
+                    <button class="btn btn-sm btn-rs text-while" formaction ="\dangky">Đăng Ký</button>
+                    <button class="btn btn-sm btn-rs text-while" formaction ="\dangnhap">Đăng Nhập</button>
+                {% endif %}
             </form>
         </div>
     </div>
