--- a/App/templates/pages/lesson.html
+++ b/App/templates/pages/lesson.html
@@ -3,7 +3,7 @@
 {% block title %}GioiThieu{% endblock %}
 <!-- article -->
 {% block article %}
-<article class="col-md-9 col-sm-12 article_area mt_t10">   
+<article class="col-md-12 col-sm-12 col-lg-8 col-xl-9 article_area mt_t10">   
     <div class="row mb_20 padding_lr15">
         <div class="title_header">
             <h3 class="mb-0 bold">Python Cơ Bản</h3>
@@ -57,7 +57,7 @@
             </div>
             <div class="card-body">
                 <div class="row_mr0">
-                    <div class="lesson_next col-md-3 col-sm-6">
+                    <div class="lesson_next col-md-6 col-sm-6 col-xl-3 col-lg-6 padding_5">
                         <div class="card">
                             <div class="image_bank">
                                 <img src="{% static 'image/bank/tpbank.jpg' %}" alt="" class="card-img-top rounded-top">
@@ -71,7 +71,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="lesson_next col-md-3 col-sm-6">
+                    <div class="lesson_next col-md-6 col-sm-6 col-xl-3 col-lg-6 padding_5">
                         <div class="card">
                             <div class="image_bank">
                                 <img src="{% static 'image/bank/Teckcombank.png' %}" alt="" class="card-img-top rounded-top">
@@ -85,7 +85,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="lesson_next col-md-3 col-sm-6">
+                    <div class="lesson_next col-md-6 col-sm-6 col-xl-3 col-lg-6 padding_5">
                         <div class="card">
                             <div class="image_bank">
                                 <img src="{% static 'image/bank/momo.jpg' %}" alt="" class="card-img-top rounded-top">
@@ -99,7 +99,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="lesson_next col-md-3 col-sm-6">
+                    <div class="lesson_next col-md-6 col-sm-6 col-xl-3 col-lg-6 padding_5">
                         <div class="card">
                             <div class="image_bank">
                                 <img src="{% static 'image/bank/ZaloPay.png' %}" alt="" class="card-img-top rounded-top">
@@ -127,19 +127,19 @@
                 </div>
             </div>
             <div class="les_row">
-                <div class="lesson_next col-md-3 col-sm-6 col-12 padding_5">
+                <div class="lesson_next col-md-6 col-sm-6 col-lg-6 col-xl-3 padding_5">
                     <div class="video_next"><video></video></div>
                     <div class="title_next"><a href="#"><h5 class="font_size_init" alt="Bài 2: Cú pháp đơn giản 12345678">Bài 2: Cú pháp đơn giản 12345678</h5></a></div>
                 </div>
-                <div class="lesson_next col-md-3 col-sm-6 col-12 padding_5">
+                <div class="lesson_next col-md-6 col-sm-6 col-lg-6 col-xl-3 padding_5">
                     <div class="video_next"><video></video></div>
                     <div class="title_next"><a href="#"><h5 class="font_size_init">Bài 2: Cú pháp đơn giản</h5></a></div>
                 </div>
-                <div class="lesson_next col-md-3 col-sm-6 col-12 padding_5">
+                <div class="lesson_next col-md-6 col-sm-6 col-lg-6 col-xl-3 padding_5">
                     <div class="video_next"><video></video></div>
                     <div class="title_next"><a href="#"><h5 class="font_size_init">Bài 2: Cú pháp đơn giản</h5></a></div>
                 </div>
-                <div class="lesson_next col-md-3 col-sm-6 col-12 padding_5">
+                <div class="lesson_next col-md-6 col-sm-6 col-lg-6 col-xl-3 padding_5">
                     <div class="video_next"><video></video></div>
                     <div class="title_next"><a href="#"><h5 class="font_size_init">Bài 2: Cú pháp đơn giản</h5></a></div>
                 </div>
@@ -157,7 +157,7 @@
 {% endblock %}
  <!-- aside -->
 {% block aside %}
-<aside class="col-md-3 col-sm-12 aside_area mt_t10">
+<aside class="col-md-12 col-sm-12 col-lg-4 col-xl-3 aside_area mt_t10">
     <!-- facebook -->
     <!-- <div id="fb-root"></div>
     <div class="fb-page" data-href="https://www.facebook.com/Developer-Vi%E1%BB%87t-Nam-109512397877362" 
