--- a/App/static/css/screen_size.css
+++ b/App/static/css/screen_size.css
@@ -17,6 +17,9 @@
     footer p {
         font-size: 12px !important;
     }
+    .font_size_init{
+        font-size:17px !important;
+    }
 }
 @media only screen and (max-width: 1024px){
     h1 {
@@ -36,5 +39,8 @@
     }
     footer p {
         font-size: 14px !important;
+    }
+    .font_size_init{
+        font-size:14px !important;
     }
 }
