--- a/App/templates/base_nav.html
+++ b/App/templates/base_nav.html
@@ -7,10 +7,10 @@
 
         <div class="collapse navbar-collapse" id="navbarsExample07">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item home">
+                <li class="nav-item"  id="home">
                     <a class="nav-link" href="\trangchu">Trang Chủ <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown" id="course">
                     <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown07" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Khóa Học</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown07">
                         <a class="dropdown-item" href="#">Python</a>
@@ -18,16 +18,16 @@
                         <a class="dropdown-item" href="#">GoLang</a>
                     </div>
                 </li>
-                <li class="nav-item document">
+                <li class="nav-item" id="document">
                     <a class="nav-link" href="\gioithieu">Chia Sẻ Kiến Thức</a>
                 </li>
-                <li class="nav-item about">
+                <li class="nav-item" id="about">
                     <a class="nav-link" href="\gioithieu">Giới Thiệu</a>
                 </li>
-                <li class="nav-item contact">
+                <li class="nav-item" id="contact">
                     <a class="nav-link" href="\dangnhap">Liên Hệ</a>
                 </li>
-                <li class="nav-item sponsorship">
+                <li class="nav-item" id="sponsorship">
                     <a class="nav-link" href="\dangnhap">Tài trợ</a>
                 </li>                        
             </ul>
@@ -38,10 +38,10 @@
                             {{ user.username}}
                         </button>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#"><i class="fas fa-info-circle mr_5"></i>Thông tin</a>
-                            <a class="dropdown-item" href="#"><i class="fas fa-key mr_5"></i>Đổi mật khẩu</a>
+                            <a class="dropdown-item" href="#"><i class="fa fa-user mr_10"></i>Hồ sơ</a>
+                            <a class="dropdown-item" href="#"><i class="fas fa-key mr_10"></i>Đổi mật khẩu</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="\dangxuat"><i class="fas fa-sign-out-alt mr_5"></i>Đăng xuất</a>
+                            <a class="dropdown-item" href="\dangxuat"><i class="fas fa-sign-out-alt mr_10"></i>Đăng xuất</a>
                         </div>
                     </div>
 
