--- a/App/templates/base_sub.html
+++ b/App/templates/base_sub.html
@@ -24,6 +24,7 @@
         <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
         <!-- java script self-defined -->
         <script src="{% static 'js/validate.js' %}"></script>
+        <script src="{% static 'js/style.js' %}"></script>
         
     </head>
     {% block body %}{% endblock %}
