--- a/App/templates/pages/about.html
+++ b/App/templates/pages/about.html
@@ -16,10 +16,10 @@
 
                     <div class="collapse navbar-collapse" id="navbarsExample07">
                         <ul class="navbar-nav mr-auto">
-                            <li class="nav-item active">
+                            <li class="nav-item active" id="home">
                                 <a class="nav-link" href="\trangchu">Trang Chủ <span class="sr-only">(current)</span></a>
                             </li>
-                            <li class="nav-item dropdown">
+                            <li class="nav-item dropdown" id="course">
                                 <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown07" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Khóa Học</a>
                                 <div class="dropdown-menu" aria-labelledby="dropdown07">
                                     <a class="dropdown-item drop_hearder" href="#">Python</a>
@@ -27,16 +27,16 @@
                                     <a class="dropdown-item drop_hearder" href="#">GoLang</a>
                                 </div>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item" id="document">
                                 <a class="nav-link" href="\gioithieu">Chia Sẻ Kiến Thức</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item" id="about">
                                 <a class="nav-link" href="\gioithieu">Giới Thiệu</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item" id="contact">
                                 <a class="nav-link" href="#">Liên Hệ</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item" id="sponsorship">
                                 <a class="nav-link" href="#">Tài trợ</a>
                             </li>                        
                         </ul>
