--- a/App/templates/pages/about.html
+++ b/App/templates/pages/about.html
@@ -66,13 +66,14 @@
 
         <main role="main" class="inner cover">           
             <h1 class="cover-heading">Developer Việt Nam</h1>
-            <p class="lead">Chúng tôi tạo ra Developer Việt Nam mục đích để cung cấp các bài học về lập trình từ cơ bản đến nâng cao. Giúp những ai đang cần tìm hiểu về ngôn ngữ mới</p>
+            <p class="lead">Developer Việt Nam được tạo ra nhằm mục đích cung cấp các bài học hoàn toàn miễn phí về lập trình. Chúng tôi có các bài học từ cơ bản đến nâng cao.</p>
             
         </main>
 
         <footer class="mastfoot mt-auto text-center">
             <div class="row footer_btn">
                 <button type="button" class="btn btn-primary btn-lg mr_20 mt_t10">Liên Hệ Chúng Tôi</button>
+                <button type="button" class="btn btn-danger btn-lg mr_20 mt_t10">Tài Trợ</button>
                 <div class="btn-group mt_t10">
                     <button type="button" class="btn-lg btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Khóa Học</button> 
                     <div class="dropdown-menu">
