--- a/App/templates/pages/home.html
+++ b/App/templates/pages/home.html
@@ -45,16 +45,16 @@
         <div class="container-fluid">
 				<div class="textbox-group">
 					<div class="row">
-						{% for subjectList in subjectList%}
+						{% for course in course_list%}
 							<div class="col-md-3 col-lg-3 mt_t20">									
 							<!-- textbox -->
 							<div class="textbox">
 								<div class="textbox__image" style="background-image: url({% static 'image/background/yellow02.jpg' %})">
-									<a href="\khoahoc"><img src="/media/{{subjectList.image}}" alt="{{subjectList.name}}"></a>
+									<a href="/khoahoc/{{course.course_id}}"><img src="/media/{{course.image}}" alt="{{course.name}}"></a>
 								</div>
 								<div class="textbox__body">
-									<h2 class="textbox__title"><a href="\khoahoc">{{subjectList.name}}</a></h2>
-									<div class="textbox__description"><p class="bold">{{subjectList.content}}</p></div>
+									<h2 class="textbox__title"><a href="/khoahoc/{{course_list.course_id}}">{{course.name}}</a></h2>
+									<div class="textbox__description"><p class="bold">{{course.content|safe|linebreaks}}</p></div>
 								</div>
 							</div><!-- End / textbox -->									
 						</div>
